--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "poseidon-ng",
+  "name": "diverseai",
   "version": "17.0.0",
   "scripts": {
     "ng": "ng",
@@ -38,8 +38,8 @@
     "ngx-cookie-service": "^17.1.0",
     "primeflex": "^3.3.1",
     "primeicons": "6.0.1",
-    "primeng": "17.5.0",
-    "quill": "^1.3.7",
+    "primeng": "^17.18.10",
+    "quill": "2.0.0-dev.4",
     "rxjs": "~7.8.1",
     "svelte": "^4.2.19",
     "tslib": "^2.5.0",
